--- a/OnYourFace/templates/index.html
+++ b/OnYourFace/templates/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-
-
-  </style>
-  <title>Flask Multiple Upload</title>
+  <title>OnYourFace - Welcome</title>
   <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
