--- a/OnYourFace/templates/train.html
+++ b/OnYourFace/templates/train.html
@@ -5,7 +5,7 @@
 
 
   </style>
-  <title>Flask Multiple Upload</title>
+  <title>OnYourFace - Train</title>
   <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
